--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,8 @@ services:
     container_name: react-app
     ports:
       - "8080:8080"
-    restart: always
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
