--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,9 @@ services:
       - "9000:9000"
     environment:
       - CHOKIDAR_USEPOLLING=true
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
